--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <h1 id="first"> Barry Bohem </h1> 
     <img src="./Image/Barry Bonson .jpeg" class="fourth"alt="Picture of Barry Bohem">
     <p><q>Agile methods derive much of their agility by relying on the tacit knowledge embodied in the team,rather than writing the knowleadge down in plans."By Barry Boehm.</q></p>
-    <h2 class="second"> What was Barry Bohem's contrubution to computer sience?</h1>
+    <h2 class="second"> What was Barry Bohem's contrubution to computer sience?</h2>
     <p class="third">Mr.Barry Bohem is known for his many contributions to software engineering, to be more specific, Mr. Bohem had created a model called the spiral model of software development. Boehm also had refined the Wideband Delphi method of estimating to include more group iteration, making it more suitable for specific problems, such as software development.</p>
     <br>
      <h2 class="second"> History on Mr.Barry Bohem.</h2>
     <h3 class="third"> 1935 </h3>
-    <p class="third"> Mr.Barry Bohem was born on May 16, 1935 in santa monica of USA.  
+    <p class="third"> Mr.Barry Bohem was born on May 16, 1935 in santa monica of USA.</p> 
       <h3 class="third"> 1957 to 1964.</h3>
       <p class="third"> From 1957 to 1964. Mr. Bohem has recived mutliple degrees thorugh his years of univresities like B.A,in mathematic from Harvard university and earned two more degrees called master of sience and doctor of philosphy from university of Calfornia.</p>
         <h3 class="third">1973 to 1989.</h3>
