--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body style="background:gray">
     <h1 id="first"> Barry Bohem </h1> 
-    <img src="./Image/Barry Bonson .jpeg" class="fourth"alt="Picture of Barry Bohem">
+    <img src="./images/barry-bohem.jpg" class="fourth"alt="Picture of Barry Bohem">
     <p><q>Agile methods derive much of their agility by relying on the tacit knowledge embodied in the team,rather than writing the knowleadge down in plans."By Barry Boehm.</q></p>
     <h2 class="second"> What was Barry Bohem's contrubution to computer sience?</h2>
     <p class="third">Mr.Barry Bohem is known for his many contributions to software engineering, to be more specific, Mr. Bohem had created a model called the spiral model of software development. Boehm also had refined the Wideband Delphi method of estimating to include more group iteration, making it more suitable for specific problems, such as software development.</p>
