--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body style="background:gray">
     <h1 id="first"> Barry Bohem </h1> 
-    <img src="./images/barry-bohem.jpg" class="fourth"alt="Picture of Barry Bohem">
+    <img src="./images/barry-bohem.jpg" class="fourth" alt="Picture of Barry Bohem">
     <p><q>Agile methods derive much of their agility by relying on the tacit knowledge embodied in the team,rather than writing the knowleadge down in plans."By Barry Boehm.</q></p>
     <h2 class="second"> What was Barry Bohem's contrubution to computer sience?</h2>
     <p class="third">Mr.Barry Bohem is known for his many contributions to software engineering, to be more specific, Mr. Bohem had created a model called the spiral model of software development. Boehm also had refined the Wideband Delphi method of estimating to include more group iteration, making it more suitable for specific problems, such as software development.</p>
@@ -22,6 +22,8 @@
         <p class="third"> From 1973 to 1989 Mr.Bohem was a chief sientist of the defense system group at TRW.inc.</p>
         <h3 class="third"> 1989 to 1994.</h3>
         <p class="third"> From 1989 to 1994 Mr. Bohem served within the U.S. Department of Defense as a director for DARAPA (Defence advanced reashearch project Agency).In 1992 Mr.Bohem earned a reward for Office of the Secretary of Defense Award for Excellence. Then a ASQC (American society for quality,lifetime Achievement Award in 1994.</p>
+        <h3 class="second"> What does barry bohem do now.</h3>
+        <p class="third"> Barry Bhoem is stil alive and is in his 80s and he also retired but he is on youtube having interviews with other youtubers telling about history and how software egenaring works </p>
     <script src="script.js"></script>
   </body>
 </html>
