--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h3 class="third"> 1989 to 1994.</h3>
         <p class="third"> From 1989 to 1994 Mr. Bohem served within the U.S. Department of Defense as a director for DARAPA (Defence advanced reashearch project Agency).In 1992 Mr.Bohem earned a reward for Office of the Secretary of Defense Award for Excellence. Then a ASQC (American society for quality,lifetime Achievement Award in 1994.</p>
         <h3 class="second"> What does barry bohem do now.</h3>
-        <p class="third"> Barry Bhoem is stil alive and is in his 80s and he also retired but he is on youtube having interviews with other youtubers telling about history and how software egenaring works </p>
+        <p class="third"> Barry Bhoem is still alive and is in his 80s, and he also retired. However, he is on youtube having interviews with other YouTubers telling about history and how software engineering works.</p>
     <script src="script.js"></script>
   </body>
 </html>
